fix:防投毒codecheck问题修复